# Numerosity-Is-Driven-By-Intermediate-Visual-Representations

./: README.md  pyproject.toml  pyrightconfig.json  requirements.txt
Numbersense/: config.py
Numbersense/analysis/: analyze.py  analyze_data.py  analyze_model.py  analyze_results.py  target_transforms.py  utilities.py
Numbersense/data_loaders/: training_dataloader.py  transform_loader.py  validation_dataloader.py
Numbersense/data_loaders/targets/: category_differentiation.py  even_odd.py  fill_objects_numerosity.py  fixed_object.py  numerosity.py  numerosity_background_change.py  numerosity_object_change.py  numerosity_size_difference.py  object_differentiation.py  target_number.py  target_object.py  varying_size.py  varying_size_and_object.py  (+2 more)
Numbersense/datagen/: descriptors.py  generator.py  runtime.py
Numbersense/figures/: action_prediction_task_plots.py  embedding_space_plots.py  plot.py
Numbersense/model/: networks.py
Numbersense/training/: runner.py  training.py
Numbersense/utilities/: helpers.py  navigator.py
examples/: activation-regression.py  bandwidth-test.py  direct-decoding.py  embedding-regression.py  embedding-sharpeness.py  fMRI-regression.py  perona_end_to_end.py  slurm-gendata.sh  slurm-taskonomy.sh
experiments/bandwidth/: bandwith.py
experiments/hierarchical/: accuracy-sharpeness-regression.py  generate_dataset.py  hierarchical_experiment.py  imagefeat-regression.py  plot_numerosity_accuracy.py  slurm-training.sh  train_with_backbone.py
experiments/taskonomy/: single-gpu-taskonomy.sh  taskonomy_experiment.py
(+2 files in other folders)
